# rdfetch

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  README.md.in  autogen.sh  configure.ac  msmtp.rdfetch  notifyrc  podget-wrapper.in  podgetrc.in  rdfetch-rivendell.menu  rdfetch.desktop  rdfetch.desktop.in  rdfetch.in  rdfetch.spec.in  rdfetch.xml  sendusr1.c  zsh-functions.in
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  debhelper-build-stamp  files  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex
